src/test/ui/issues/issue-3668-2.stderr
error[E0434]: can't capture dynamic environment in a fn item
  --> $DIR/issue-3668-2.rs:12:27
   |
LL |     static child: isize = x + 1;
   |                           ^
   |
   = help: use the `|| { ... }` closure form instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0434`.
